# pursuit_simulation

./: README.md
devel/: .catkin  local_setup.sh
devel/lib/pkg_name_jeff_tf_learn/: any_name_ok_launch_name  cmake_list_name_move  create_new_frame  jeff_tf_listener
devel/lib/pkgconfig/: pkg_name_jeff_tf_learn.pc
devel/share/pkg_name_jeff_tf_learn/cmake/: pkg_name_jeff_tf_learnConfig.cmake
src/pkg_name_jeff_tf_learn/: CMakeLists.txt  package.xml
src/pkg_name_jeff_tf_learn/config/: CircleTrack.yaml  PID_para.yaml  Track.yaml  car_model_para.yaml  showmap.py
src/pkg_name_jeff_tf_learn/include/: car_model.h  make_it_move.h  map.h  my_spline.h
src/pkg_name_jeff_tf_learn/launch/: just_move.launch  start_run.launch
src/pkg_name_jeff_tf_learn/src/: car_model.cpp  file_create_frame.cpp  file_tf_broadcaster.cpp  file_tf_listener.cpp  make_it_move.cpp  map.cpp  my_spline.cpp  simulation_node_pid1.cpp  tfmain.cpp
